--- a/LivingDesign/View/History.storyboard
+++ b/LivingDesign/View/History.storyboard
@@ -1,7 +1,125 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15400" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="IgY-AR-ZAm">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15404"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
-    <scenes/>
+    <scenes>
+        <!--History-->
+        <scene sceneID="655-xi-F0E">
+            <objects>
+                <viewController storyboardIdentifier="HistoryViewControllerID" id="IgY-AR-ZAm" customClass="History" customModule="LivingDesign" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="giy-g4-a3U">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="c4S-0A-7ut">
+                                <rect key="frame" x="20" y="106" width="374" height="756"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="HistoryCell" rowHeight="114" id="0tr-Ye-fvE" customClass="HistoryTabelViewCell" customModule="LivingDesign" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="374" height="114"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="0tr-Ye-fvE" id="KJ1-7e-e7F">
+                                            <rect key="frame" x="0.0" y="0.0" width="374" height="114"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="1BT-su-UDZ">
+                                                    <rect key="frame" x="16" y="7" width="103" height="100"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="1BT-su-UDZ" secondAttribute="height" multiplier="103:100" id="8uI-lT-XXF"/>
+                                                        <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="103" id="b7A-RH-xwY"/>
+                                                        <constraint firstAttribute="width" constant="103" id="uYe-Ms-bSP"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kfq-Ax-Zn2">
+                                                    <rect key="frame" x="-44" y="21" width="0.0" height="21"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="21" id="uau-wU-YPY"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="25Y-ix-QK3">
+                                                    <rect key="frame" x="-44" y="56" width="0.0" height="20"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="20" id="cMm-Bt-iye"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="star" translatesAutoresizingMaskIntoConstraints="NO" id="QLN-Hd-Zu0">
+                                                    <rect key="frame" x="127" y="59" width="36" height="35"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="35" id="8yX-5z-Ks6"/>
+                                                    </constraints>
+                                                </imageView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="1BT-su-UDZ" firstAttribute="leading" secondItem="KJ1-7e-e7F" secondAttribute="leadingMargin" id="2QO-EP-17w"/>
+                                                <constraint firstAttribute="bottom" secondItem="QLN-Hd-Zu0" secondAttribute="bottom" constant="20" id="2nE-D4-ymK"/>
+                                                <constraint firstItem="1BT-su-UDZ" firstAttribute="top" secondItem="KJ1-7e-e7F" secondAttribute="topMargin" constant="-4" id="6bi-OO-Gk2"/>
+                                                <constraint firstItem="Kfq-Ax-Zn2" firstAttribute="top" secondItem="KJ1-7e-e7F" secondAttribute="topMargin" constant="10" id="6wk-Py-Izd"/>
+                                                <constraint firstItem="25Y-ix-QK3" firstAttribute="leading" secondItem="1BT-su-UDZ" secondAttribute="trailing" constant="20" id="8Yk-8D-H0s"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="Kfq-Ax-Zn2" secondAttribute="trailing" constant="28" id="A2U-Sp-RLf"/>
+                                                <constraint firstItem="1BT-su-UDZ" firstAttribute="centerY" secondItem="KJ1-7e-e7F" secondAttribute="centerY" id="OJv-oY-xfg"/>
+                                                <constraint firstItem="Kfq-Ax-Zn2" firstAttribute="leading" secondItem="1BT-su-UDZ" secondAttribute="trailing" constant="20" id="Qwx-WG-9eM"/>
+                                                <constraint firstItem="QLN-Hd-Zu0" firstAttribute="leading" secondItem="1BT-su-UDZ" secondAttribute="trailing" constant="8" id="Wcn-gz-tM6"/>
+                                                <constraint firstItem="1BT-su-UDZ" firstAttribute="centerY" secondItem="KJ1-7e-e7F" secondAttribute="centerY" id="YSd-gz-XY3"/>
+                                                <constraint firstItem="25Y-ix-QK3" firstAttribute="top" secondItem="KJ1-7e-e7F" secondAttribute="topMargin" constant="45" id="fms-yj-pDl"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="25Y-ix-QK3" secondAttribute="trailing" constant="28" id="gpR-Pj-gVD"/>
+                                                <constraint firstItem="1BT-su-UDZ" firstAttribute="leading" secondItem="KJ1-7e-e7F" secondAttribute="leading" constant="16" id="rIW-mF-soC"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="dateLabel" destination="25Y-ix-QK3" id="pkl-Zc-cR8"/>
+                                            <outlet property="nameLabel" destination="Kfq-Ax-Zn2" id="wfH-8F-2Yj"/>
+                                            <outlet property="starImageView" destination="QLN-Hd-Zu0" id="0ad-a7-jql"/>
+                                            <outlet property="thumbnailImageView" destination="1BT-su-UDZ" id="5OP-1T-KFc"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="IgY-AR-ZAm" id="02i-IF-HJK"/>
+                                    <outlet property="delegate" destination="IgY-AR-ZAm" id="IAK-4u-vcj"/>
+                                </connections>
+                            </tableView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="履歴一覧" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xYu-tq-0W7">
+                                <rect key="frame" x="20" y="44" width="374" height="29"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ugf-5S-3mR">
+                                <rect key="frame" x="343" y="68" width="38" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.55294117649999996" green="0.69803921570000005" blue="0.1215686275" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <state key="normal" title="↑↓">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <viewLayoutGuide key="safeArea" id="VHO-ZL-7vO"/>
+                    </view>
+                    <connections>
+                        <outlet property="tableView" destination="c4S-0A-7ut" id="JmI-Ba-iea"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="2V4-5Y-UGy" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="69.565217391304358" y="69.642857142857139"/>
+        </scene>
+    </scenes>
+    <resources>
+        <image name="star" width="36" height="36"/>
+    </resources>
 </document>
