--- a/LivingDesign/View/Home.storyboard
+++ b/LivingDesign/View/Home.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15400" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="qv8-ee-q9t">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15400" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15404"/>
@@ -17,7 +17,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dRy-rv-gCG">
-                                <rect key="frame" x="20" y="64" width="374" height="30"/>
+                                <rect key="frame" x="20" y="99" width="374" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="be8-tE-peL"/>
                                 </constraints>
@@ -26,7 +26,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="krB-6x-gLi">
-                                <rect key="frame" x="20" y="119" width="374" height="683"/>
+                                <rect key="frame" x="20" y="154" width="374" height="648"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="mxr-9s-cQp">
                                     <size key="itemSize" width="131" height="164"/>
@@ -74,30 +74,6 @@
                                     <outlet property="delegate" destination="qv8-ee-q9t" id="oOJ-ox-l6t"/>
                                 </connections>
                             </collectionView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PHm-Uy-EWe">
-                                <rect key="frame" x="339" y="64" width="50" height="30"/>
-                                <color key="backgroundColor" red="0.55137425659999995" green="0.6991565824" blue="0.1212733015" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="50" id="Jkd-3P-2t6"/>
-                                    <constraint firstAttribute="height" constant="30" id="pJX-Xa-65p"/>
-                                </constraints>
-                                <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <state key="normal" title="削除">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                </state>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="K0o-bA-Ouj">
-                                <rect key="frame" x="269" y="64" width="50" height="30"/>
-                                <color key="backgroundColor" red="0.55294117647058827" green="0.69803921568627447" blue="0.12156862745098039" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="50" id="EU8-po-BZI"/>
-                                    <constraint firstAttribute="height" constant="30" id="V5f-cY-X8H"/>
-                                </constraints>
-                                <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <state key="normal" title="追加">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                </state>
-                            </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MwX-pN-rqw" customClass="Footer" customModule="LivingDesign" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="812" width="414" height="84"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
@@ -105,21 +81,34 @@
                                     <constraint firstAttribute="height" constant="84" id="8EJ-WW-i6s"/>
                                 </constraints>
                             </view>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Zot-vM-Ylc">
+                                <rect key="frame" x="0.0" y="44" width="414" height="45"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="45" id="7o5-Ng-ZyZ"/>
+                                </constraints>
+                                <items>
+                                    <navigationItem title="ホーム" id="k6C-Tq-zgK">
+                                        <rightBarButtonItems>
+                                            <barButtonItem title="削除" id="92C-44-qxg"/>
+                                            <barButtonItem title="追加" id="Lbz-Xn-5nq"/>
+                                        </rightBarButtonItems>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="PHm-Uy-EWe" firstAttribute="top" secondItem="EkR-Ua-mdL" secondAttribute="top" constant="20" id="DGd-84-fc2"/>
                             <constraint firstItem="MwX-pN-rqw" firstAttribute="trailing" secondItem="EkR-Ua-mdL" secondAttribute="trailing" id="DsD-ey-uzX"/>
                             <constraint firstItem="dRy-rv-gCG" firstAttribute="leading" secondItem="EkR-Ua-mdL" secondAttribute="leading" constant="20" id="Hy1-cm-m2P"/>
-                            <constraint firstItem="K0o-bA-Ouj" firstAttribute="top" secondItem="EkR-Ua-mdL" secondAttribute="top" constant="20" id="KEe-u4-GGO"/>
+                            <constraint firstItem="Zot-vM-Ylc" firstAttribute="top" secondItem="EkR-Ua-mdL" secondAttribute="top" id="bAc-jd-S9I"/>
                             <constraint firstItem="MwX-pN-rqw" firstAttribute="top" secondItem="krB-6x-gLi" secondAttribute="bottom" constant="10" id="hZY-19-Nrx"/>
                             <constraint firstAttribute="bottom" secondItem="MwX-pN-rqw" secondAttribute="bottom" id="hdS-nr-ZeE"/>
                             <constraint firstItem="EkR-Ua-mdL" firstAttribute="trailing" secondItem="dRy-rv-gCG" secondAttribute="trailing" constant="20" id="iS5-Yp-w5C"/>
+                            <constraint firstItem="Zot-vM-Ylc" firstAttribute="trailing" secondItem="EkR-Ua-mdL" secondAttribute="trailing" id="j3r-Gk-3yt"/>
+                            <constraint firstItem="Zot-vM-Ylc" firstAttribute="leading" secondItem="EkR-Ua-mdL" secondAttribute="leading" id="lKy-HC-jX7"/>
                             <constraint firstItem="EkR-Ua-mdL" firstAttribute="trailing" secondItem="krB-6x-gLi" secondAttribute="trailing" constant="20" id="mIN-so-6V5"/>
-                            <constraint firstItem="PHm-Uy-EWe" firstAttribute="leading" secondItem="K0o-bA-Ouj" secondAttribute="trailing" constant="20" id="mS7-Xm-I9O"/>
-                            <constraint firstItem="EkR-Ua-mdL" firstAttribute="trailing" secondItem="PHm-Uy-EWe" secondAttribute="trailing" constant="25" id="nJ3-Dc-8pv"/>
                             <constraint firstItem="krB-6x-gLi" firstAttribute="leading" secondItem="EkR-Ua-mdL" secondAttribute="leading" constant="20" id="tAW-Fi-Vh3"/>
-                            <constraint firstItem="dRy-rv-gCG" firstAttribute="top" secondItem="EkR-Ua-mdL" secondAttribute="top" constant="20" id="xZK-jj-Hpv"/>
+                            <constraint firstItem="dRy-rv-gCG" firstAttribute="top" secondItem="EkR-Ua-mdL" secondAttribute="top" constant="55" id="xZK-jj-Hpv"/>
                             <constraint firstItem="MwX-pN-rqw" firstAttribute="leading" secondItem="EkR-Ua-mdL" secondAttribute="leading" id="xfo-t4-OPs"/>
                             <constraint firstItem="krB-6x-gLi" firstAttribute="top" secondItem="dRy-rv-gCG" secondAttribute="bottom" constant="25" id="yiB-aL-Nzq"/>
                         </constraints>
@@ -132,7 +121,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aAc-Ve-eKa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="134.78260869565219" y="211.60714285714286"/>
+            <point key="canvasLocation" x="1044.9275362318842" y="211.60714285714286"/>
         </scene>
     </scenes>
 </document>
