--- a/LivingDesign/View/History.storyboard
+++ b/LivingDesign/View/History.storyboard
@@ -16,7 +16,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="c4S-0A-7ut">
-                                <rect key="frame" x="20" y="108" width="374" height="694"/>
+                                <rect key="frame" x="20" y="99" width="374" height="703"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="HistoryCell" rowHeight="148" id="0tr-Ye-fvE" customClass="HistoryTabelViewCell" customModule="LivingDesign" customModuleProvider="target">
@@ -96,18 +96,6 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ugf-5S-3mR">
-                                <rect key="frame" x="343" y="68" width="38" height="30"/>
-                                <color key="backgroundColor" red="0.55294117649999996" green="0.69803921570000005" blue="0.1215686275" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="mEO-0E-O6e"/>
-                                    <constraint firstAttribute="width" constant="38" id="ys8-Lc-adB"/>
-                                </constraints>
-                                <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <state key="normal" title="↑↓">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                </state>
-                            </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tya-Qe-4FL" customClass="Footer" customModule="LivingDesign" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="812" width="414" height="84"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
@@ -115,17 +103,29 @@
                                     <constraint firstAttribute="height" constant="84" id="CvR-Kz-1UI"/>
                                 </constraints>
                             </view>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="z8r-gj-sWR">
+                                <rect key="frame" x="0.0" y="44" width="414" height="45"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="45" id="mBj-hL-C12"/>
+                                </constraints>
+                                <items>
+                                    <navigationItem title="History" id="H5s-OP-04r">
+                                        <barButtonItem key="rightBarButtonItem" title="↑↓" id="8Kr-vq-WfQ"/>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="c4S-0A-7ut" firstAttribute="top" secondItem="ugf-5S-3mR" secondAttribute="bottom" constant="10" id="5Bg-Rn-iKK"/>
                             <constraint firstItem="tya-Qe-4FL" firstAttribute="top" secondItem="c4S-0A-7ut" secondAttribute="bottom" constant="10" id="El5-tV-4gq"/>
-                            <constraint firstItem="ugf-5S-3mR" firstAttribute="top" secondItem="VHO-ZL-7vO" secondAttribute="top" constant="24" id="M4S-Sg-6qt"/>
+                            <constraint firstItem="c4S-0A-7ut" firstAttribute="top" secondItem="VHO-ZL-7vO" secondAttribute="top" constant="55" id="ITv-oe-raY"/>
+                            <constraint firstItem="z8r-gj-sWR" firstAttribute="top" secondItem="VHO-ZL-7vO" secondAttribute="top" id="QAj-GZ-7yC"/>
                             <constraint firstItem="VHO-ZL-7vO" firstAttribute="trailing" secondItem="tya-Qe-4FL" secondAttribute="trailing" id="Wsk-Xd-s04"/>
                             <constraint firstAttribute="bottom" secondItem="tya-Qe-4FL" secondAttribute="bottom" id="aD2-PD-4I9"/>
                             <constraint firstItem="xYu-tq-0W7" firstAttribute="centerX" secondItem="giy-g4-a3U" secondAttribute="centerX" id="cY7-NL-blT"/>
+                            <constraint firstItem="z8r-gj-sWR" firstAttribute="leading" secondItem="VHO-ZL-7vO" secondAttribute="leading" id="cck-jO-Lur"/>
                             <constraint firstItem="VHO-ZL-7vO" firstAttribute="trailing" secondItem="c4S-0A-7ut" secondAttribute="trailing" constant="20" id="dhI-7I-T4n"/>
-                            <constraint firstItem="VHO-ZL-7vO" firstAttribute="trailing" secondItem="ugf-5S-3mR" secondAttribute="trailing" constant="33" id="gmc-ff-5wm"/>
+                            <constraint firstItem="z8r-gj-sWR" firstAttribute="trailing" secondItem="VHO-ZL-7vO" secondAttribute="trailing" id="lsh-T5-3Ak"/>
                             <constraint firstItem="xYu-tq-0W7" firstAttribute="top" secondItem="VHO-ZL-7vO" secondAttribute="top" id="o09-Xp-WCB"/>
                             <constraint firstItem="tya-Qe-4FL" firstAttribute="leading" secondItem="VHO-ZL-7vO" secondAttribute="leading" id="pTn-ka-lkt"/>
                             <constraint firstItem="c4S-0A-7ut" firstAttribute="leading" secondItem="VHO-ZL-7vO" secondAttribute="leading" constant="20" id="ssY-nP-NUP"/>
